Downloaded and added spritesheet for pieces.

--- a/src/styles/square.css
+++ b/src/styles/square.css
@@ -6,14 +6,44 @@
     line-height: 64px;
 }
 
-.square.black {
-    background-color: black;
-    color: white;
+.square.pawn {
+    background: transparent url(./spritesheet.png) -0px -95px;
+    background-size: 435px;
+}
+
+.square.knight {
+    background: transparent url(./spritesheet.png) -55px -18px;
+    background-size: 435px;
+}
+
+.square.bishop {
+    background: transparent url(./spritesheet.png) -110px -23px;
+    background-size: 435px;
+}
+
+.square.rook {
+    background: transparent url(./spritesheet.png) 0px -18px;
+    background-size: 410px;
+}
+
+.square.queen {
+    background: transparent url(./spritesheet.png) -150px -18px;
+    background-size: 410px;
+}
+
+.square.king {
+    background: transparent url(./spritesheet.png) -200px -18px;
+    background-size: 410px;
 }
 
 .square.white {
     background-color: white;
     color: black;
+}
+
+.square.black {
+    background-color: black;
+    color: white;
 }
 
 .square.selected {
